fix: quicklinks link flicker

--- a/src/modules/quicklinks/_style.scss
+++ b/src/modules/quicklinks/_style.scss
@@ -70,6 +70,10 @@
 
     .wsu-list--style-boxed {
         margin-left: $wsu-spacing--xsmall;
+
+        a {
+            display: inline-block;
+        }
     }
 
     h2 {
